# CMakeCppProjectTemplate

./: .gitignore  CMakeLists.txt  README.cn.md  README.md
cmake/: load_3rdparty.cmake  messagecolor.cmake  toolchain_options.cmake  utils.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.hpp  version.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/main/: main.cpp
tests/: CMakeLists.txt  test_logger.cpp
